--- a/datafusion/sqllogictest/Cargo.toml
+++ b/datafusion/sqllogictest/Cargo.toml
@@ -17,6 +17,7 @@
 
 [package]
 authors = { workspace = true }
+description = "DataFusion sqllogictest driver"
 edition = { workspace = true }
 homepage = { workspace = true }
 license = { workspace = true }
