--- a/datafusion/common/Cargo.toml
+++ b/datafusion/common/Cargo.toml
@@ -68,6 +68,7 @@ pyo3 = { version = "0.22.0", optional = true }
 recursive = { workspace = true, optional = true }
 sqlparser = { workspace = true }
 tokio = { workspace = true }
+smallvec = "1.13.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 web-time = "1.1.0"
