--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -95,11 +95,11 @@ jobs:
       - name: Check workspace with additional features
         run: cargo check --profile ci --workspace --benches --features avro,json,integration-tests
 
-      - name: Check Cargo.lock for datafusion-cli
-        run: |
-          # If this test fails, try running `cargo update` in the `datafusion-cli` directory
-          # and check in the updated Cargo.lock file.
-          cargo check --profile ci --manifest-path datafusion-cli/Cargo.toml --locked
+#      - name: Check Cargo.lock for datafusion-cli
+#        run: |
+#          # If this test fails, try running `cargo update` in the `datafusion-cli` directory
+#          # and check in the updated Cargo.lock file.
+#          cargo check --profile ci --manifest-path datafusion-cli/Cargo.toml --locked
 
   # cargo check datafusion to ensure that the datafusion crate can be built with only a
   # subset of the function packages enabled.
@@ -211,29 +211,28 @@ jobs:
       - name: Verify Working Directory Clean
         run: git diff --exit-code
 
-  linux-test-example:
-    name: cargo examples (amd64)
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Run examples
-        run: |
-          # test datafusion-sql examples
-          cargo run --profile ci --example sql
-          # test datafusion-examples
-          ci/scripts/rust_example.sh
-      - name: Verify Working Directory Clean
-        run: git diff --exit-code
+#  linux-test-example:
+#    name: cargo examples (amd64)
+#    needs: [ linux-build-lib ]
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run examples
+#        run: |
+#          # test datafusion-sql examples
+#          cargo run --example sql
+#          # test datafusion-examples
+#          ci/scripts/rust_example.sh
+#      - name: Verify Working Directory Clean
+#        run: git diff --exit-code
 
   # Run `cargo test doc` (test documentation examples)
   linux-test-doc:
@@ -260,38 +259,38 @@ jobs:
         run: git diff --exit-code
 
   # Run `cargo doc` to ensure the rustdoc is clean
-  linux-rustdoc:
-    name: cargo doc
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Run cargo doc
-        run: ci/scripts/rust_docs.sh
+#  linux-rustdoc:
+#    name: cargo doc
+#    needs: linux-build-lib
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run cargo doc
+#        run: ci/scripts/rust_docs.sh
 
-  linux-wasm-pack:
-    name: build with wasm-pack
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-      - name: Build with wasm-pack
-        working-directory: ./datafusion/wasmtest
-        run: wasm-pack build --dev
-
+#  linux-wasm-pack:
+#    name: build with wasm-pack
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Install wasm-pack
+#        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+#      - name: Build with wasm-pack
+#        working-directory: ./datafusion/wasmtest
+#        run: wasm-pack build --dev
+#
   # verify that the benchmark queries return the correct results
   verify-benchmark-results:
     name: verify benchmark results (amd64)
@@ -350,11 +349,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
+      - name: Setup toolchain
+        run: |
+          rustup toolchain install stable --no-self-update
+          rustup default stable
       - name: Run sqllogictest
         run: |
           cd datafusion/sqllogictest
@@ -421,30 +419,29 @@ jobs:
           cd datafusion-cli
           cargo test --profile ci --lib --tests --bins --all-features
 
-  test-datafusion-pyarrow:
-    name: cargo test pyarrow (amd64)
-    needs: linux-build-lib
-    runs-on: ubuntu-20.04
-    container:
-      image: amd64/rust:bullseye # Workaround https://github.com/actions/setup-python/issues/721
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.8"
-      - name: Install PyArrow
-        run: |
-          echo "LIBRARY_PATH=$LD_LIBRARY_PATH" >> $GITHUB_ENV
-          python -m pip install pyarrow
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Run datafusion-common tests
-        run: cargo test --profile ci -p datafusion-common --features=pyarrow
+#  test-datafusion-pyarrow:
+#    name: cargo test pyarrow (amd64)
+#    needs: [ linux-build-lib ]
+#    runs-on: ubuntu-20.04
+#    container:
+#      image: amd64/rust:bullseye # Workaround https://github.com/actions/setup-python/issues/721
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: "3.8"
+#      - name: Install PyArrow
+#        run: |
+#          echo "LIBRARY_PATH=$LD_LIBRARY_PATH" >> $GITHUB_ENV
+#          python -m pip install pyarrow
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run datafusion-common tests
+#        run: cargo test -p datafusion-common --features=pyarrow
 
   vendor:
     name: Verify Vendored Code
@@ -501,7 +498,7 @@ jobs:
   #         protoc --version
   #     - name: Setup Rust toolchain
   #       run: |
-  #         rustup toolchain install stable
+  #         rustup toolchain install stable --no-self-update
   #         rustup default stable
   #         rustup component add rustfmt clippy
   #     - name: Cache Cargo
@@ -513,7 +510,7 @@ jobs:
   #     - name: Run coverage
   #       run: |
   #         export PATH=$PATH:$HOME/d/protoc/bin
-  #         rustup toolchain install stable
+  #         rustup toolchain install stable --no-self-update
   #         rustup default stable
   #         cargo install --version 0.20.1 cargo-tarpaulin
   #         cargo tarpaulin --all --out Xml
@@ -541,101 +538,119 @@ jobs:
       - name: Run clippy
         run: ci/scripts/rust_clippy.sh
 
-  cargo-toml-formatting-checks:
-    name: check Cargo.toml formatting
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Install taplo
-        run: cargo +stable install taplo-cli --version ^0.9 --locked
-      # if you encounter an error, try running 'taplo format' to fix the formatting automatically.
-      - name: Check Cargo.toml formatting
-        run: taplo format --check
+  # Check answers are correct when hash values collide
+#  hash-collisions:
+#    name: cargo test hash collisions (amd64)
+#    needs: [ linux-build-lib ]
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run tests
+#        run: |
+#          cd datafusion
+#          cargo test --lib --tests --features=force_hash_collisions,avro
 
-  config-docs-check:
-    name: check configs.md and ***_functions.md is up-to-date
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-      - name: Check if configs.md has been modified
-        run: |
-          # If you encounter an error, run './dev/update_config_docs.sh' and commit
-          ./dev/update_config_docs.sh
-          git diff --exit-code
-      - name: Check if any of the ***_functions.md has been modified
-        run: |
-          # If you encounter an error, run './dev/update_function_docs.sh' and commit
-          ./dev/update_function_docs.sh
-          git diff --exit-code
+#  cargo-toml-formatting-checks:
+#    name: check Cargo.toml formatting
+#    needs: [ linux-build-lib ]
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Install taplo
+#        run: cargo +stable install taplo-cli --version ^0.9 --locked
+#      # if you encounter an error, try running 'taplo format' to fix the formatting automatically.
+#      - name: Check Cargo.toml formatting
+#        run: taplo format --check
+
+#  config-docs-check:
+#    name: check configs.md and ***_functions.md is up-to-date
+#    needs: [ linux-build-lib ]
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - uses: actions/setup-node@v4
+#        with:
+#          node-version: "20"
+#      - name: Check if configs.md has been modified
+#        run: |
+#          # If you encounter an error, run './dev/update_config_docs.sh' and commit
+#          ./dev/update_config_docs.sh
+#          git diff --exit-code
+#      - name: Check if any of the ***_functions.md has been modified
+#        run: |
+#          # If you encounter an error, run './dev/update_function_docs.sh' and commit
+#          ./dev/update_function_docs.sh
+#          git diff --exit-code
 
   # Verify MSRV for the crates which are directly used by other projects:
   # - datafusion
   # - datafusion-substrait
   # - datafusion-proto
   # - datafusion-cli
-  msrv:
-    name: Verify MSRV (Min Supported Rust Version)
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-      - name: Install cargo-msrv
-        run: cargo install cargo-msrv
-      - name: Check datafusion
-        working-directory: datafusion/core
-        run: |
-          # If you encounter an error with any of the commands below it means
-          # your code or some crate in the dependency tree has a higher MSRV
-          # (Min Supported Rust Version) than the one specified in the
-          # `rust-version` key of `Cargo.toml`.
-          #
-          # To reproduce: 
-          # 1. Install the version of Rust that is failing. Example: 
-          #    rustup install 1.80.1
-          # 2. Run the command that failed with that version. Example:
-          #    cargo +1.80.1 check -p datafusion
-          # 
-          # To resolve, either:
-          # 1. Change your code to use older Rust features, 
-          # 2. Revert dependency update
-          # 3. Update the MSRV version in `Cargo.toml`
-          #
-          # Please see the DataFusion Rust Version Compatibility Policy before
-          # updating Cargo.toml. You may have to update the code instead. 
-          # https://github.com/apache/datafusion/blob/main/README.md#rust-version-compatibility-policy
-          cargo msrv --output-format json --log-target stdout verify
-      - name: Check datafusion-substrait
-        working-directory: datafusion/substrait
-        run: cargo msrv --output-format json --log-target stdout verify
-      - name: Check datafusion-proto
-        working-directory: datafusion/proto
-        run: cargo msrv --output-format json --log-target stdout verify
-      - name: Check datafusion-cli
-        working-directory: datafusion-cli
-        run: cargo msrv --output-format json --log-target stdout verify
+#  msrv:
+#    name: Verify MSRV (Min Supported Rust Version)
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#      - name: Install cargo-msrv
+#        run: cargo install cargo-msrv
+#      - name: Check datafusion
+#        working-directory: datafusion/core
+#        run: |
+#          # If you encounter an error with any of the commands below it means
+#          # your code or some crate in the dependency tree has a higher MSRV
+#          # (Min Supported Rust Version) than the one specified in the
+#          # `rust-version` key of `Cargo.toml`.
+#          #
+#          # To reproduce:
+#          # 1. Install the version of Rust that is failing. Example:
+#          #    rustup install 1.80.1
+#          # 2. Run the command that failed with that version. Example:
+#          #    cargo +1.80.1 check -p datafusion
+#          #
+#          # To resolve, either:
+#          # 1. Change your code to use older Rust features,
+#          # 2. Revert dependency update
+#          # 3. Update the MSRV version in `Cargo.toml`
+#          #
+#          # Please see the DataFusion Rust Version Compatibility Policy before
+#          # updating Cargo.toml. You may have to update the code instead.
+#          # https://github.com/apache/datafusion/blob/main/README.md#rust-version-compatibility-policy
+#          cargo msrv --output-format json --log-target stdout verify
+#      - name: Check datafusion-substrait
+#        working-directory: datafusion/substrait
+#        run: cargo msrv --output-format json --log-target stdout verify
+#      - name: Check datafusion-proto
+#        working-directory: datafusion/proto
+#        run: cargo msrv --output-format json --log-target stdout verify
+#      - name: Check datafusion-cli
+#        working-directory: datafusion-cli
+#        run: cargo msrv --output-format json --log-target stdout verify
