Remove unnecessary files from CI action to fee up disk space (#383)
* add RUST_BACKTRACE=1 to test env

* try removing unnecessary things to get more disk space

* that rule took 4m21s to run, try removing less so it goes faster

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -110,6 +110,13 @@ jobs:
     container:
       image: amd64/rust
     steps:
+      - name: Remove unnecessary preinstalled software
+        run: |
+          echo "Disk space before cleanup:"
+          df -h
+          rm -rf /__t/* || true
+          echo "Disk space after cleanup:"
+          df -h
       - uses: actions/checkout@v4
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
