--- a/datafusion/substrait/Cargo.toml
+++ b/datafusion/substrait/Cargo.toml
@@ -38,6 +38,7 @@ async-recursion = "1.0"
 async-trait = { workspace = true }
 chrono = { workspace = true }
 datafusion = { workspace = true, features = ["sql"] }
+datafusion-functions-table = { workspace = true }
 half = { workspace = true }
 itertools = { workspace = true }
 object_store = { workspace = true }
