Add workspace crate dependency graph to doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ members = [
     "datafusion-examples/examples/ffi/ffi_module_loader",
     "test-utils",
     "benchmarks",
+    "datafusion/ci-dummy",
     "datafusion/macros",
     "datafusion/doc",
 ]
