--- a/datafusion/optimizer/Cargo.toml
+++ b/datafusion/optimizer/Cargo.toml
@@ -41,7 +41,9 @@ workspace = true
 name = "datafusion_optimizer"
 
 [features]
+default = ["sql"]
 recursive_protection = ["dep:recursive"]
+sql = ["datafusion-expr/sql"]
 
 [dependencies]
 arrow = { workspace = true }
