Set sql feature for optimizer crate

--- a/datafusion/core/Cargo.toml
+++ b/datafusion/core/Cargo.toml
@@ -98,6 +98,7 @@ serde = [
 ]
 sql = [
     "datafusion-common/sql",
+    "datafusion-optimizer/sql",
     "datafusion-functions-nested?/sql",
     "datafusion-sql",
     "sqlparser",
