--- a/datafusion/ffi/Cargo.toml
+++ b/datafusion/ffi/Cargo.toml
@@ -46,6 +46,7 @@ arrow = { workspace = true, features = ["ffi"] }
 arrow-schema = { workspace = true }
 async-ffi = { version = "0.5.0", features = ["abi_stable"] }
 async-trait = { workspace = true }
+chrono = { workspace = true }
 datafusion = { workspace = true, default-features = false }
 datafusion-catalog = { workspace = true }
 datafusion-common = { workspace = true }
