--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ arrow-schema = { version = "54.1.0", default-features = false }
 async-trait = "0.1.73"
 bigdecimal = "0.4.7"
 bytes = "1.4"
-chrono = { version = "0.4.38", default-features = false }
+chrono = { version = "=0.4.38", default-features = false }
 ctor = "0.2.9"
 dashmap = "6.0.1"
 datafusion = { path = "datafusion/core", version = "45.0.0", default-features = false }
