--- a/.github/actions/setup-macos-aarch64-builder/action.yaml
+++ b/.github/actions/setup-macos-aarch64-builder/action.yaml
@@ -21,7 +21,7 @@ inputs:
   rust-version:
     description: 'version of rust to install (e.g. stable)'
     required: true
-    default: 'stable'
+    default: '1.86.0'
 runs:
   using: "composite"
   steps:
@@ -39,9 +39,8 @@ runs:
     - name: Setup Rust toolchain
       shell: bash
       run: |
-        rustup update stable
-        rustup toolchain install stable
-        rustup default stable
+        rustup toolchain install stable --no-self-update
+        rustup default 1.86.0
         rustup component add rustfmt
     - name: Setup rust cache
       uses: Swatinem/rust-cache@v2
