--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -21,7 +21,7 @@ inputs:
   rust-version:
     description: 'version of rust to install (e.g. stable)'
     required: true
-    default: 'stable'
+    default: '1.86.0'
 runs:
   using: "composite"
   steps:
