--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -189,27 +189,27 @@ jobs:
       - name: Verify Working Directory Clean
         run: git diff --exit-code
 
-  linux-test-datafusion-cli:
-    name: cargo test datafusion-cli (amd64)
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Run tests (excluding doctests)
-        run: |
-          cd datafusion-cli
-          cargo test --profile ci --lib --tests --bins --all-features
-      - name: Verify Working Directory Clean
-        run: git diff --exit-code
+#  linux-test-datafusion-cli:
+#    name: cargo test datafusion-cli (amd64)
+#    needs: linux-build-lib
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#          fetch-depth: 1
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run tests (excluding doctests)
+#        run: |
+#          cd datafusion-cli
+#          cargo test --profile ci --lib --tests --bins --all-features
+#      - name: Verify Working Directory Clean
+#        run: git diff --exit-code
 
 #  linux-test-example:
 #    name: cargo examples (amd64)
@@ -351,8 +351,8 @@ jobs:
           submodules: true
       - name: Setup toolchain
         run: |
-          rustup toolchain install stable --no-self-update
-          rustup default stable
+          rustup toolchain install 1.86.0 --no-self-update
+          rustup default 1.86.0
       - name: Run sqllogictest
         run: |
           cd datafusion/sqllogictest
@@ -498,8 +498,8 @@ jobs:
   #         protoc --version
   #     - name: Setup Rust toolchain
   #       run: |
-  #         rustup toolchain install stable --no-self-update
-  #         rustup default stable
+  #         rustup toolchain install 1.86.0 --no-self-update
+  #         rustup default 1.86.0
   #         rustup component add rustfmt clippy
   #     - name: Cache Cargo
   #       uses: actions/cache@v4
@@ -510,8 +510,8 @@ jobs:
   #     - name: Run coverage
   #       run: |
   #         export PATH=$PATH:$HOME/d/protoc/bin
-  #         rustup toolchain install stable --no-self-update
-  #         rustup default stable
+  #         rustup toolchain install 1.86.0 --no-self-update
+  #         rustup default 1.86.0
   #         cargo install --version 0.20.1 cargo-tarpaulin
   #         cargo tarpaulin --all --out Xml
   #     - name: Report coverage
@@ -532,7 +532,7 @@ jobs:
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
         with:
-          rust-version: stable
+          rust-version: 1.86.0
       - name: Install Clippy
         run: rustup component add clippy
       - name: Run clippy
@@ -632,7 +632,7 @@ jobs:
 #          #
 #          # To reproduce:
 #          # 1. Install the version of Rust that is failing. Example:
-#          #    rustup install 1.80.1
+#          #    rustup install 1.86.0
 #          # 2. Run the command that failed with that version. Example:
 #          #    cargo +1.80.1 check -p datafusion
 #          #
