--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -325,42 +325,42 @@ jobs:
       - name: Verify Working Directory Clean
         run: git diff --exit-code
 
-  sqllogictest-postgres:
-    name: "Run sqllogictest with Postgres runner"
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: db_test
-          POSTGRES_INITDB_ARGS: --encoding=UTF-8 --lc-collate=C --lc-ctype=C
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - name: Setup toolchain
-        run: |
-          rustup toolchain install 1.86.0 --no-self-update
-          rustup default 1.86.0
-      - name: Run sqllogictest
-        run: |
-          cd datafusion/sqllogictest
-          PG_COMPAT=true PG_URI="postgresql://postgres:postgres@$POSTGRES_HOST:$POSTGRES_PORT/db_test" cargo test --profile ci --features=postgres --test sqllogictests
-        env:
-          # use postgres for the host here because we have specified a container for the job
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+#  sqllogictest-postgres:
+#    name: "Run sqllogictest with Postgres runner"
+#    needs: linux-build-lib
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    services:
+#      postgres:
+#        image: postgres:15
+#        env:
+#          POSTGRES_PASSWORD: postgres
+#          POSTGRES_DB: db_test
+#          POSTGRES_INITDB_ARGS: --encoding=UTF-8 --lc-collate=C --lc-ctype=C
+#        ports:
+#          - 5432:5432
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#      - name: Setup toolchain
+#        run: |
+#          rustup toolchain install 1.86.0 --no-self-update
+#          rustup default 1.86.0
+#      - name: Run sqllogictest
+#        run: |
+#          cd datafusion/sqllogictest
+#          PG_COMPAT=true PG_URI="postgresql://postgres:postgres@$POSTGRES_HOST:$POSTGRES_PORT/db_test" cargo test --profile ci --features=postgres --test sqllogictests
+#        env:
+#          # use postgres for the host here because we have specified a container for the job
+#          POSTGRES_HOST: postgres
+#          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
 
 #  Temporarily commenting out the Windows flow, the reason is enormously slow running build
 #  Waiting for new Windows 2025 github runner
