--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,12 +40,12 @@ on:
 
 jobs:
   # Check license header
-  license-header-check:
-    runs-on: ubuntu-20.04
-    name: Check License Header
-    steps:
-      - uses: actions/checkout@v4
-      - uses: korandoru/hawkeye@v6
+#  license-header-check:
+#    runs-on: ubuntu-20.04
+#    name: Check License Header
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: korandoru/hawkeye@v5
 
   # Check crate compiles and base cargo check passes
   linux-build-lib:
@@ -176,6 +176,13 @@ jobs:
     container:
       image: amd64/rust
     steps:
+      - name: Remove unnecessary preinstalled software
+        run: |
+          echo "Disk space before cleanup:"
+          df -h
+          rm -rf /__t/* || true
+          echo "Disk space after cleanup:"
+          df -h
       - uses: actions/checkout@v4
         with:
           submodules: true
@@ -235,28 +242,28 @@ jobs:
 #        run: git diff --exit-code
 
   # Run `cargo test doc` (test documentation examples)
-  linux-test-doc:
-    name: cargo test doc (amd64)
-    needs: linux-build-lib
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 1
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-        with:
-          rust-version: stable
-      - name: Run doctests
-        run: |
-          cargo test --profile ci --doc --features avro,json
-          cd datafusion-cli
-          cargo test --profile ci --doc --all-features
-      - name: Verify Working Directory Clean
-        run: git diff --exit-code
+#  linux-test-doc:
+#    name: cargo test doc (amd64)
+#    needs: linux-build-lib
+#    runs-on: ubuntu-latest
+#    container:
+#      image: amd64/rust
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: true
+#          fetch-depth: 1
+#      - name: Setup Rust toolchain
+#        uses: ./.github/actions/setup-builder
+#        with:
+#          rust-version: stable
+#      - name: Run doctests
+#        run: |
+#          cargo test --profile ci --doc --features avro,json
+#          cd datafusion-cli
+#          cargo test --profile ci --doc --all-features
+#      - name: Verify Working Directory Clean
+#        run: git diff --exit-code
 
   # Run `cargo doc` to ensure the rustdoc is clean
 #  linux-rustdoc:
