--- a/datafusion/macros/Cargo.toml
+++ b/datafusion/macros/Cargo.toml
@@ -39,11 +39,10 @@ workspace = true
 
 [lib]
 name = "datafusion_macros"
-# lib.rs to be re-added in the future
-path = "src/user_doc.rs"
 proc-macro = true
 
 [dependencies]
 datafusion-doc = { workspace = true }
-quote = "1.0.41"
-syn = { version = "2.0.113", features = ["full"] }
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "2.0", features = ["full"] }
