--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -587,12 +587,10 @@ jobs:
         uses: ./.github/actions/setup-builder
         with:
           rust-version: stable
-      - name: Setup nightly Rust toolchain
-        run: rustup toolchain install nightly --component rustfmt
       - name: Run cargo fmt check (including doc comments)
         run: |
           echo '' > datafusion/proto/src/generated/datafusion.rs
-          cargo +nightly fmt --all -- --check --config format_code_in_doc_comments=true
+          ci/scripts/rust_fmt.sh
 
   # Coverage job disabled due to
   # https://github.com/apache/datafusion/issues/3678
