add scalar range stat type

--- a/datafusion/physical-expr/Cargo.toml
+++ b/datafusion/physical-expr/Cargo.toml
@@ -68,6 +68,7 @@ datafusion-functions = { workspace = true }
 insta = { workspace = true }
 rand = { workspace = true }
 rstest = { workspace = true }
+parquet = { workspace = true }
 
 [[bench]]
 harness = false
