perf: improve performance of string replace (17-32% faster)
Use a reusable String buffer instead of allocating a new String for each
row. This optimization achieves 17-32% performance improvement across different
string types and sizes by avoiding per-row allocations.

Benchmark results:
| Benchmark     | Array Size | String Length | Baseline (µs) | Optimized (µs) | Improvement |
|---------------|------------|---------------|---------------|----------------|-------------|
| string_view   | 1024       | 32            | 32.53         | 22.32          | 31.4% faster|
| string        | 1024       | 32            | 31.89         | 21.49          | 32.6% faster|
| large_string  | 1024       | 32            | 31.75         | 22.01          | 30.7% faster|
| string_view   | 1024       | 128           | 49.51         | 36.11          | 27.1% faster|
| string        | 1024       | 128           | 48.91         | 34.90          | 28.6% faster|
| large_string  | 1024       | 128           | 49.78         | 35.42          | 28.8% faster|
| string_view   | 4096       | 32            | 133.67        | 95.93          | 28.2% faster|
| string        | 4096       | 32            | 131.48        | 91.73          | 30.2% faster|
| large_string  | 4096       | 32            | 129.61        | 92.82          | 28.4% faster|
| string_view   | 4096       | 128           | 191.50        | 153.74         | 19.7% faster|
| string        | 4096       | 128           | 185.27        | 149.37         | 19.4% faster|
| large_string  | 4096       | 128           | 187.82        | 154.32         | 17.8% faster|

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -212,6 +212,11 @@ required-features = ["string_expressions"]
 
 [[bench]]
 harness = false
+name = "replace"
+required-features = ["string_expressions"]
+
+[[bench]]
+harness = false
 name = "random"
 required-features = ["math_expressions"]
 
