perf: improve performance of levenshtein by reusing cache buffer
Add levenshtein_with_buffer() function that accepts a reusable cache buffer
to avoid allocating a new Vec<usize> for each distance calculation.

Changes:
- Added levenshtein_with_buffer() in datafusion-common that takes a mutable
  Vec<usize> buffer parameter
- Updated levenshtein function to use the optimized version with a reusable
  buffer across all rows
- Applied optimization to all data types: Utf8View, Utf8, and LargeUtf8
- Added benchmark to measure performance improvements

Optimization:
- Before: Allocated new Vec<usize> cache for every row
- After: Single Vec<usize> buffer reused across all rows

Benchmark Results:
- size=1024, str_len=8:  60.6 µs → 45.9 µs (24% faster)
- size=1024, str_len=32: 615.5 µs → 598.5 µs (3% faster)
- size=4096, str_len=8:  234.7 µs → 180.5 µs (23% faster)
- size=4096, str_len=32: 2.46 ms → 2.38 ms (3% faster)

The optimization shows significant improvements for shorter strings (23-24%)
where allocation overhead is more prominent relative to algorithm cost.
For longer strings, the O(m×n) algorithm complexity dominates, but still
shows measurable 3% improvement from eliminating per-row allocations.

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -264,3 +264,8 @@ required-features = ["string_expressions"]
 harness = false
 name = "ends_with"
 required-features = ["string_expressions"]
+
+[[bench]]
+harness = false
+name = "levenshtein"
+required-features = ["unicode_expressions"]
