Document nested pushdown semantics and optimizations
Document supported nested pushdown semantics and update
row-level predicate construction to utilize leaf-based
projection masks. Enable list-aware predicates like
array_has_all while maintaining unsupported nested
structures on the fallback path.

Expand filter candidate building for root and leaf
projections of nested columns, facilitating cost
estimation and mask creation aligned with Parquet leaf
layouts. Include struct/list pushdown checks and add a
new integration test to validate array_has_all
pushdown behavior against Parquet row filters.
Introduce dev dependencies for nested function helpers
and temporary file creation used in the new tests.

--- a/datafusion/datasource-parquet/Cargo.toml
+++ b/datafusion/datasource-parquet/Cargo.toml
@@ -56,6 +56,8 @@ tokio = { workspace = true }
 
 [dev-dependencies]
 chrono = { workspace = true }
+datafusion-functions-nested = { workspace = true }
+tempfile = { workspace = true }
 
 # Note: add additional linter rules in lib.rs.
 # Rust does not support workspace + new linter rules in subcrates yet
