add physical plan re-use benchmark

--- a/datafusion/physical-plan/Cargo.toml
+++ b/datafusion/physical-plan/Cargo.toml
@@ -94,6 +94,10 @@ name = "partial_ordering"
 
 [[bench]]
 harness = false
+name = "plan_reuse"
+
+[[bench]]
+harness = false
 name = "spill_io"
 
 [[bench]]
