perf: improve performance of translate by reusing buffers (#19533)
## Which issue does this PR close?

<!--
We generally require a GitHub issue to be filed for all bug fixes and
enhancements and this helps us generate change logs for our releases.
You can link an issue to this PR using the GitHub syntax. For example
`Closes #123` indicates that this PR will close issue #123.
-->

- Closes #.

## Rationale for this change

<!--
Why are you proposing this change? If this is already explained clearly
in the issue then this section is not needed.
Explaining clearly why changes are proposed helps reviewers understand
your changes and offer better suggestions for fixes.
-->

## What changes are included in this PR?

<!--
There is no need to duplicate the description in the issue here but it
is sometimes worth providing a summary of the individual changes in this
PR.
-->

Optimize translate function by reusing HashMap and Vec buffers across
all rows instead of allocating new ones for each row.

Changes:
- Moved HashMap and Vec allocations outside the main loop
- Clear and reuse buffers for each row instead of reallocating
- Use explicit loops instead of chained iterators for better control
- Added benchmark to measure performance improvements

Optimization:
- Before: Allocated HashMap + 4 Vecs for every row
- After: Single set of reusable buffers cleared for each row

Benchmark Results:
- size=1024, str_len=8:  234.6 µs → 147.9 µs (37% faster)
- size=1024, str_len=32: 628.6 µs → 394.2 µs (37% faster)
- size=4096, str_len=8:  964.4 µs → 575.2 µs (40% faster)
- size=4096, str_len=32: 2.54 ms → 1.56 ms (39% faster)

The optimization shows exceptional 37-40% performance improvements
across all test cases. The HashMap reuse is particularly impactful since
HashMap creation/destruction has significant overhead with hashing,
bucket allocation, and internal bookkeeping. Combined with eliminating 4
Vec allocations per row, this becomes the most significant optimization
in this serie

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -272,5 +272,10 @@ required-features = ["string_expressions"]
 
 [[bench]]
 harness = false
+name = "translate"
+required-features = ["unicode_expressions"]
+
+[[bench]]
+harness = false
 name = "levenshtein"
 required-features = ["unicode_expressions"]
