perf: optimize regexp_count to avoid String allocation when start position is provided
Replace `.chars().skip().collect::<String>()` with zero-copy string slicing
using `char_indices()` to find the byte offset, then slice with `&value[byte_offset..]`.

This eliminates unnecessary String allocation per row when a start position
is specified.

Changes:
- Use char_indices().nth() to find byte offset for start position (1-based)
- Use string slicing &value[byte_offset..] instead of collecting chars
- Added benchmark to measure performance improvements

Optimization:
- Before: Allocated new String via .collect() for each row with start position
- After: Uses zero-copy string slice

Benchmark results:
- size=1024, str_len=32:  96.361 µs -> 41.458 µs (57.0% faster, 2.3x speedup)
- size=1024, str_len=128: 210.16 µs -> 56.064 µs (73.3% faster, 3.7x speedup)
- size=4096, str_len=32:  376.90 µs -> 162.98 µs (56.8% faster, 2.3x speedup)
- size=4096, str_len=128: 855.68 µs -> 263.61 µs (69.2% faster, 3.2x speedup)

The optimization shows greater improvements for longer strings (up to 73% faster)
since string slicing is O(1) regardless of length, while the previous approach
had allocation costs that grew with string length.

--- a/datafusion/functions/Cargo.toml
+++ b/datafusion/functions/Cargo.toml
@@ -272,6 +272,11 @@ required-features = ["string_expressions"]
 
 [[bench]]
 harness = false
+name = "regexp_count"
+required-features = ["regex_expressions"]
+
+[[bench]]
+harness = false
 name = "translate"
 required-features = ["unicode_expressions"]
 
