--- a/Cargo.toml
+++ b/Cargo.toml
@@ -271,3 +271,16 @@ incremental = false
 inherits = "release"
 debug = true
 strip = false
+
+# [patch.crates-io]
+# parquet = { path = "../arrow-rs/parquet" }
+# arrow = { path = "../arrow-rs/arrow" }
+# arrow-array = { path = "../arrow-rs/arrow-array" }
+# arrow-buffer = { path = "../arrow-rs/arrow-buffer" }
+# arrow-cast = { path = "../arrow-rs/arrow-cast" }
+# arrow-data = { path = "../arrow-rs/arrow-data" }
+# arrow-ipc = { path = "../arrow-rs/arrow-ipc" }
+# arrow-ord = { path = "../arrow-rs/arrow-ord" }
+# arrow-schema = { path = "../arrow-rs/arrow-schema" }
+# arrow-select = { path = "../arrow-rs/arrow-select" }
+# arrow-string = { path = "../arrow-rs/arrow-string" }
